If a monospace font is not available, look for a full-and-half-fixed font. The minimal haiku image does not yet include a monospace font. In that case, be_fixed_font points to Bitstream Charter, which is a proportional font. Terminal isn't happy with that, so we try harder and we look if a full-and-half-fixed font is installed (which should be safe, since we always include VL-Gothic. Fixes #11764 .